<resources>
    <string name="app_name">Binni Go</string>
    <string name="title_activity_main2">Binni Go</string>
    <string name="title_home">Home</string>
    <string name="title_places">Lugares</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_usuario">Perfil</string>
    <string name="title_paquetes">Paquetes</string>
    <!-- URL API -->
    <string name="url_api_lugares_categoria">http://sistema-turismo.herokuapp.com/api/lugares/</string>
    <string name="url_api_anuncios">https://sistema-turismo.herokuapp.com/api/anuncios</string>
    <string name="url_api_galeria">http://sistema-turismo.herokuapp.com/api/galeria/</string>
    <string name="url_api_paquetes">https://sistema-turismo.herokuapp.com/api/paquetes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_server">http://yurtaaplication.000webhostapp.com/</string>
    <string name="title_popular_place">Populares</string>
    <string name="categoria_museos">Museos</string>
    <string name="categoria_templos">Templos y Exconventos</string>
    <string name="categoria_mercados">Mercados</string>
    <string name="categoria_zonas_arqueologicas">Zonas Arqueológicas</string>
    <string name="perfil_menu_ajustes">Ajustes</string>
    <string name="perfil_menu_ayuda">Ayuda</string>
    <string name="perfil_menu_donar">Donar</string>
    <string name="perfil_menu_acercade">Acerca de</string>
    <string name="perfil_menu_salir">Salir</string>
    <string name="perfil_permiso_galeria">No tiene permiso para acceder a la ubicación del archivo</string>
    <string name="perfil_permiso_abrir_galeria">Elija la aplicación</string>
    <string name="perfil_editar_avatar">Editar</string>
    <string name="favoritos_recientes">Recientes</string>
    <string name="favoritos_lugares">Mis lugares</string>
    <string name="accion_agregar_favorito">Agregado a favoritos</string>
    <string name="accion_eliminar_favorito">Eliminado de favoritos</string>
    <string name="lugar_ubicacion">Ubicación</string>
    <string name="lugar_precio">Precio</string>
    <string name="lugar_horario">Horario</string>
    <string name="lugar_galeria">Galeria</string>
    <string name="paquete_price">MX$ %1$s</string>
    <string name="paquete_item_personas">%1$s personas</string>
    <string name="paquete_precio">MX$ %1$s por adulto.</string>
    <string name="paquete_precio_individual">MX$ %1$s por adulto.</string>
    <string name="paquete_personas">%1$s Adultos x %2$s</string>
    <string name="lugar_descripcion">Descripción</string>
    <string name="url_imagen">http://s3.amazonaws.com/campeche/wp-content/uploads/2019/09/04100139/Screenshot_2.png</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has beenlso the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="facebook_application_id" translatable="false">1156050791451314</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1156050791451314</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="fecha_reserva">¿Cuándo te gustaría ir?</string>
    <string name="accion_comprar">Compra</string>
    <string name="compras_titulo1">Elementos en tu carrito</string>
    <string name="compras_total">Total: $ %1$s</string>
    <string name="compras_items">%1$s producto</string>
    <string name="title_shopping_activity">Carrito de compras</string>
</resources>
