<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ShoppingActivity">

            <TextView
                android:text="@string/compras_titulo1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerShopping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/layoutdetalle"
                    android:layout_alignParentBottom="true"
                    android:showDividers="middle"
                    android:divider="@drawable/divider_gray"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:background="@color/ntb_bg_color"
                        android:showDividers="middle"
                        android:divider="@drawable/divider_gray"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/comprarItems"
                            android:layout_gravity="center_vertical"
                            android:text="Número de personas"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/compraTotal"
                            android:layout_gravity="center_vertical"
                            android:gravity="right"
                            android:layout_weight="1"
                            android:text="@string/compras_total"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/btnComprar"
                        android:background="@color/colorYellow"
                        android:text="@string/accion_comprar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>
</FrameLayout>