<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorToolbarCollapsed"
            app:title="@string/app_name"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <ImageView
                    android:src="@drawable/img_place1"
                    android:id="@+id/img_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin" >

            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:layout_weight="9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
                <xyz.hanks.library.bang.SmallBangView
                    android:id="@+id/like_h"
                    android:layout_width="35dp"
                    android:layout_height="35dp">

                    <ImageView
                        android:id="@+id/favorito"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_favorite_border_black_24dp"
                        android:text="Hello World!"/>
                </xyz.hanks.library.bang.SmallBangView>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_gallery_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/lugar_galeria"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/recycler_view_galeria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_description_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/lugar_descripcion"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textVDescripcion"
                    android:text="@string/lorem_ipsum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_monetization_on_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:text="@string/lugar_precio"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/ic_location_on_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/lugar_ubicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/textVPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_marginTop="10dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/map_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>