<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutPaquete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarPaquete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorToolbarCollapsed"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:src="@drawable/img_place1"
                android:id="@+id/imgPaquete"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPaquete"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme"

                app:layout_collapseMode="pin" >

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:dividerPadding="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paqueteNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre del paquete"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Opiniones" />
            </LinearLayout>

            <TextView
                android:id="@+id/paquetePrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paquete_precio_individual"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_reserva"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <devs.mulham.horizontalcalendar.HorizontalCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textColorNormal="#bababa"
                app:textColorSelected="#FFFF"
                app:selectorColor="#c62828"
            app:selectedDateBackground="@color/colorYellow"/>
            <RelativeLayout
                android:id="@+id/expandable2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:animateLayoutChanges="true"
                android:background="@color/colorPrimary"
                android:visibility="gone">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/layoutCollapsed"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:divider="@drawable/empty_tall_divider"
                            android:showDividers="middle"
                            android:layout_marginRight="50dp"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_supervisor_account_black_24dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:textStyle="bold"
                                android:layout_gravity="center_vertical"
                                android:text="Personas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_gravity="fill_horizontal"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/btnDecrementar"
                                android:layout_gravity="center_horizontal"
                                android:text="-"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:background="@drawable/toggle_button_background"
                                android:layout_width="@dimen/button_width_reservacion"
                                android:layout_height="@dimen/button_height_reservacion"/>
                            <TextView
                                android:id="@+id/textVContador"
                                android:layout_gravity="center_horizontal"
                                android:text="0"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:background="@drawable/toggle_button_background"
                                android:layout_width="@dimen/button_width_reservacion"
                                android:layout_height="@dimen/button_height_reservacion"/>
                            <Button
                                android:id="@+id/btnAumentar"
                                android:layout_gravity="center_horizontal"
                                android:text="+"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:background="@drawable/toggle_button_background"
                                android:layout_width="@dimen/button_width_reservacion"
                                android:layout_height="@dimen/button_height_reservacion"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/btnReservar"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_margin="10dp"
                            android:textColor="@color/colorPrimary"
                            android:text="Verificar disponibilidad"
                            android:background="@color/colorYellow"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"/>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layoutComprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">
            <LinearLayout
                android:divider="@drawable/empty_tall_divider"
                android:showDividers="middle"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/paqueteNombre2"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                        android:text="Nombre del paquete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />
                    <LinearLayout
                        android:gravity="right"
                        android:orientation="vertical"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                        android:text="Total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/totalPaquete"
                        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                        android:text="$1,481.21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/paquetePrecio2"
                        android:text="n Adultos x $precio unitaro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />
                    <Button
                        android:id="@+id/btnComprar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorYellow"
                        android:text="Agregar al carrito"
                        android:textAlignment="textEnd"
                        android:textColor="@color/browser_actions_text_color"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
            </RelativeLayout>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lugar_descripcion"></TextView>


            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/textVDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lorem_ipsum" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_galeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_monetization_on_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lugar_precio"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lugar_ubicacion"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/textVPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map_ubicacion"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>